# radiology

./: .gitignore  README.md  SESSION_RECAP.md  arch_sweep_check.py  assemble_7model.py  auto_assemble_4family.sh  auto_assemble_all_swa.sh  auto_assemble_aug_smooth.sh  auto_assemble_aug_trivial.sh  auto_assemble_clahe_eva.sh  auto_assemble_cnxl_split.sh  auto_assemble_cxr_v2.sh  auto_assemble_densenet.sh  auto_assemble_eva_ablation.sh  auto_assemble_eva_plusval.sh  auto_assemble_eva_split.sh  auto_assemble_eva_swa.sh  auto_assemble_hplus_split.sh  auto_assemble_openclip.sh  auto_assemble_siglip2.sh  auto_assemble_siglip_openclip_split.sh  auto_assemble_spatial_cxr.sh  auto_assemble_tta.sh  auto_lungcrop_pipeline.sh  auto_progress.sh  auto_round2.sh  auto_round2_v2.sh  auto_stack.sh  auto_stack_alltrain.sh  auto_stack_expanded.sh  auto_stack_mlp_train.sh  auto_stack_perimage.sh  build_final_submission.py  build_lungcrop_ensemble.py  cache_3class.py  calibrate.py  cardio_alt.py  config.py  cxr_attn_head_train.py  cxr_extract.py  (+59 more)
configs/: default.yaml  hpc.yaml  hpc_14label.yaml  hpc_3class_448_clahe_s0.yaml  hpc_3class_448_s0.yaml  hpc_3class_448_s1.yaml  hpc_3class_448_s2.yaml  hpc_3class_448_split101.yaml  hpc_3class_448_split13.yaml  hpc_3class_448_split29.yaml  hpc_3class_448_split42.yaml  hpc_3class_448_split7.yaml  hpc_3class_s0.yaml  hpc_3class_s1.yaml  hpc_3class_s2.yaml  hpc_cnext_base_320_ema.yaml  hpc_cnext_base_448_ema.yaml  hpc_cnext_base_448_noema.yaml  hpc_cnext_small_512_ema.yaml  hpc_densenet_320.yaml  hpc_densenet_320_seed1.yaml  hpc_densenet_320_seed2.yaml  (+190 more)
(+18 files in other folders)
